<resources>
    <string name="app_name">BD Clean</string>

    <string name="drawer_item_1">Generate a referral code</string>
    <string name="drawer_item_2">Terms &amp; Policies</string>
    <string name="drawer_item_3">Report a problem</string>
    <string name="drawer_item_4">About</string>
    <string name="drawer_item_5">Logout</string>

    <string name="title_profile">Profile</string>
    <string name="title_events">Events</string>
    <string name="title_notice">Notice</string>
    <string name="title_team">Team</string>
    <string name="menu">Menu</string>
    <string name="hint_of_forgot_pass">Enter your email below to reset your password</string>
    <string name="email_hint">Email</string>
    <string name="back_button_text">Back</string>
    <string name="submit_button_text">Submit</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_hint">LOGIN</string>
    <string name="remember_me">Remember Me</string>
    <string name="member_hint">Not a Member?</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="referral_code">Referral Code</string>
    <string name="term_condition">I agree with all trems of BD Clean</string>
    <string name="cancel">Cancel</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name_hint">Full Name</string>
    <string name="register_as_volunteer">Register As A Volunteer</string>
    <string name="joined">I Joined</string>
    <string name="upcoming">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc">window_background</string>
</resources>
