<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="#33ffffff">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/ic_profile_black_normal"
            android:drawableStart="@drawable/ic_profile_black_normal"
            android:drawablePadding="20dp"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:textColor="#444444"/>

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/ic_password_normal"
            android:drawableStart="@drawable/ic_password_normal"
            android:drawablePadding="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#444444"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_submit"
                android:text="@string/login_hint"
                android:textColor="@android:color/white"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:weightSum="1">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/remember_me"
                    android:textColor="#424242"
                    android:checked="true"
                    android:buttonTint="#424242"/>

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="#424242"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/separator"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/member_hint"
                    android:textColor="#444444"/>

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register"
                    android:background="?attr/selectableItemBackground"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#444444"/>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_marginBottom="50dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>