<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#444444"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/separator"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/hint_of_forgot_pass"
                android:textColor="#444444"/>

            <EditText
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="#444444"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:text="@string/back_button_text"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:background="@drawable/btn_submit"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_button_text"
                    android:textColor="@android:color/white" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>