<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/reg_bg">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#33ffffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/register_as_volunteer"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/separator"/>

            <ScrollView
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp">

                        <ImageView
                            android:padding="5dp"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="#00984D"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_profile_white"/>

                        <EditText
                            android:id="@+id/fullname"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:layout_gravity="center"
                            android:background="@android:color/white"
                            android:hint="@string/name_hint"
                            android:inputType="textPersonName"
                            android:textColor="#444444"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp">

                        <ImageView
                            android:padding="5dp"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="#00984D"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_email_white"/>

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:layout_gravity="center"
                            android:background="@android:color/white"
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:textColor="#444444"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp">

                        <ImageView
                            android:padding="5dp"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="#00984D"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_key_white"/>

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:layout_gravity="center"
                            android:background="@android:color/white"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:textColor="#444444"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp">

                        <ImageView
                            android:id="@+id/datePicker"
                            android:padding="5dp"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="#00984D"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_event_white"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:layout_gravity="center"
                            android:background="@android:color/white"
                            android:hint="@string/date_of_birth"
                            android:inputType="date"
                            android:textColor="#444444"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp">

                        <ImageView
                            android:padding="5dp"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="#00984D"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_team_white"/>

                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner"
                            app:ms_background_selector="@android:color/white"
                            app:ms_text_color="@android:color/darker_gray"
                            app:ms_dropdown_height="150dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp">

                        <ImageView
                            android:padding="5dp"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="#00984D"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_code"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:layout_gravity="center"
                            android:background="@android:color/white"
                            android:hint="@string/referral_code"
                            android:inputType="textNoSuggestions"
                            android:textColor="#444444"/>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:text="@string/term_condition"
                    android:textColor="#424242"
                    android:checked="true"
                    android:buttonTint="#424242"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/btn_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_submit"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:gravity="center" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_back"
                    android:text="@string/cancel"
                    android:textColor="#00984D"
                    android:gravity="center" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:layout_marginBottom="50dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</android.support.design.widget.CoordinatorLayout>